@@ -1,10 +1,24 @@
-etc/apache2/conf.d/piuparts.apache
-etc/cron.d/piuparts-master
-#etc/piuparts/known_problems/
-usr/share/piuparts/htdocs/*
-usr/share/piuparts/master/*
-usr/share/piuparts/known_problems/*
-usr/share/piuparts/piuparts-analyze
-usr/share/piuparts/piuparts-master
-usr/share/piuparts/piuparts-master-backend
-usr/share/piuparts/piuparts-report
+conf/piuparts.apache /etc/apache2/conf.d/
+conf/piuparts-master /etc/cron.d/
+htdocs/*.* /usr/share/piuparts/htdocs/
+htdocs/images/*.* /usr/share/piuparts/htdocs/images
+bug-templates/*.mail /usr/share/piuparts/htdocs/templates/mail/
+master-bin/archive_old_logs /usr/share/piuparts/master/
+master-bin/detect_archive_issues /usr/share/piuparts/master/
+master-bin/detect_network_issues /usr/share/piuparts/master/
+master-bin/detect_piuparts_issues /usr/share/piuparts/master/
+master-bin/detect_well_known_errors /usr/share/piuparts/master/
+master-bin/gather_bts_stats /usr/share/piuparts/master/
+master-bin/generate_daily_report /usr/share/piuparts/master/
+master-bin/master_cleanup /usr/share/piuparts/master/
+master-bin/prepare_backup /usr/share/piuparts/master/
+master-bin/reclassify_bugged /usr/share/piuparts/master/
+master-bin/report_newly_bugged_packages /usr/share/piuparts/master/
+master-bin/report_stale_reserved_packages /usr/share/piuparts/master/
+master-bin/report_untestable_packages /usr/share/piuparts/master/
+master-bin/reschedule_oldest_logs /usr/share/piuparts/master/
+known_problems/*.conf /usr/share/piuparts/known_problems/
+piuparts-analyze /usr/share/piuparts/
+piuparts-master /usr/share/piuparts/
+piuparts-master-backend /usr/share/piuparts/
+piuparts-report /usr/share/piuparts/
