@@ -1,2 +1,2 @@
-debian/tmp/usr/share/man/man8/piuparts_slave_run.8.gz
-debian/tmp/usr/share/man/man8/piuparts_slave_join.8.gz
+piuparts_slave_run.8
+piuparts_slave_join.8
