@@ -1,2 +1,1 @@
-debian/tmp/usr/share/man/man1/piuparts.1.gz
-
+piuparts.1
